--- a/_includes/css/skeleton.css
+++ b/_includes/css/skeleton.css
@@ -94,7 +94,7 @@
  padding-bottom: 100px;
  width: 100px;
  height: 100px;
- background-image: url('img/me.jpg');
+ background-image: url('img/me.png');
  background-size: cover;
  display: block;
  border-radius: 50%;
@@ -108,3 +108,9 @@
 }
 
 
+.footer-image{
+	background: url(img/portjeff.jpg);
+	background-size: cover;
+	background-position: center;
+	color: white;
+}
